Update code after some source code inspection. Add more TRACE logging to follow up the sync process.